# bw_motion_ws_public

./: .gitignore  README.md  RELEASE_NOTES.md  simplify_meshes.py
motion_record/: 1.json  111aa.json  1218test.json  1225test.json  1225test_copy.json  2.json  3.json
src/bw_interface/: CMakeLists.txt  package.xml
src/bw_interface/msg/: CtrlCmd.msg  Event.msg  ForceFdb.msg  State.msg  TeleopMode.msg  VR.msg
src/bw_interface/srv/: PlaybackStart.srv  SetCtrlSrc.srv
src/bw_motion_utils/: package.xml  setup.cfg  setup.py
src/bw_motion_utils/bw_motion_utils/: zenoh_bridge.py
src/bw_sim2real/: package.xml  setup.cfg  setup.py  test_speed_json.py
src/bw_sim2real/bw_sim2real/: ik_solver.py  input_router.py  mantis_casadi_node.py  mantis_playback_node.py  sdk_bridge_node.py  sim_to_real_bridge.py  vel_config.py
src/bw_sim2real/launch/: phase1_sim2real.launch.py  sdk_sim.launch.py
src/bw_sim2real_view/: package.xml  setup.cfg  setup.py
src/bw_sim2real_view/bw_sim2real_view/: mantis_control_panel.py
src/bw_sim2real_view/launch/: view.launch.py
src/mantis_description/: CMakeLists.txt  package.xml
src/mantis_description/meshes/collision/: L_Ear_Link.STL  L_Elbow_Pitch_Link.STL  L_Hand_L_Link.STL  L_Hand_R_Link.STL  R_Elbow_Pitch_Link.STL  R_Hand_L_Link.STL  R_Hand_R_Link.STL  R_Shoulder_Yaw_Link.STL  Waist_Link.STL  Wheel_Back_Link.STL  Wheel_Left_Link.STL
src/mantis_description/meshes/visual/: L_Ear_Link.STL  R_Ear_Link.STL  R_Hand_L_Link.STL  R_Shoulder_Pitch_Link.STL  R_Wrist_Roll_Link.STL  Waist_Link.STL  Wheel_Left_Link.STL  Wheel_Right_Link.STL
src/mantis_description/meshes_backup/collision/: R_Shoulder_Pitch_Link.STL
src/mantis_description/meshes_backup/visual/: L_Elbow_Pitch_Link.STL  R_Ear_Link.STL  R_Elbow_Pitch_Link.STL  R_Hand_R_Link.STL  R_Wrist_Roll_Link.STL  Wheel_Back_Link.STL
src/mantis_description/rviz/: mantis.rviz
src/mantis_description/urdf/: mantis.urdf  mantis.xacro  mantis1.xacro
src/mantis_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/mantis_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  mantis.ros2_control.xacro  mantis.srdf  mantis.urdf.xacro  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml
src/mantis_moveit_config/launch/: demo.launch.py  headless_demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
